Fixing back and forth mapping between array/list